# tp

./: Cargo.toml  NOTES.md  README.md  test.ngc
examples/: 3d-trajectory.glade  3d-trajectory.rs  arc-blend-3d.rs  arc-blend.glade  arc-blend.rs  kiss3d.rs  multi.glade  multi.rs  multi2.glade  multi2.rs  spaghetti-follow.rs  spaghetti.rs  sync_vis.rs  ui.glade  ui.glade.xml  ui.glade~  ui.rs  ui2.glade  ui2.rs  vis.rs
src/: arc_blend.rs  circular_blend.rs  lib.rs  scurve.rs  segments_blends.rs  synchronised.rs  trapezoidal.rs  trapezoidal_non_zero.rs  trapezoidal_non_zero_3d.rs
