[package]
name = "tp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.17.0"
gio = "0.17.4"
gtk = "0.17.1"
plotters = { version = "0.3.4", default-features = false }
plotters-cairo = "0.3.2"
